# 23prime-api

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile-local  Dockerfile-test  README.md  check.sh  clippy.toml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml
.github/actions/cargo-cache/: action.yml
.github/actions/postgresql-cache/: action.yml
.github/workflows/: api.yml  rust-ci.yml
docker-entrypoint-initdb.d/postgres/: create_schema.sql
entity/: Cargo.toml
entity/src/: anime.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220909_234602_create_animes.rs
migrations/2021-10-04-062110_create_animes/: down.sql  up.sql
migrations/2021-11-01-125659_update_animes_constraints/: down.sql  up.sql
migrations/2022-01-29-133803_create_cities/: down.sql  up.sql
src/: app_state.rs  auth.rs  cookie.rs  db.rs  dbconfig.rs  errors.rs  lib.rs  logger.rs  main.rs  oidc.rs  routes.rs  schema.rs
src/controllers/: auth.rs  callback.rs  echo.rs  index.rs  mod.rs  scrape.rs
src/controllers/api/: animes.rs  echo.rs  index.rs  mod.rs  scrape.rs
src/controllers/api/animes/: index.rs  mod.rs  scrape.rs
src/controllers/auth/: before.rs  callback.rs  logout.rs  mod.rs
src/controllers/health_check/: index.rs
src/entity/: anime.rs  mod.rs  prelude.rs
src/models/: anime.rs  mod.rs
src/service/: anime.rs  anime_scraper.rs  mod.rs  token.rs  userinfo.rs
src/types/: animes.rs  mod.rs  season.rs  wday.rs
tests/controllers/api/: echo.rs  index_test.rs  mod.rs
tests/controllers/api/animes/: index.rs  mod.rs
tests/controllers/auth/: logout.rs  mod.rs
tests/controllers/health_check/: index_test.rs
