[package]
name = "anime-api"
version = "0.1.0"
authors = ["23prime <23.prime.37@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.5"
actix-files = "0.5"
actix-rt = "2.5"
actix-session = "0.4"
actix-web = { version = "3.3", features = ["rustls"] }
actix-web-httpauth = "0.5"
alcoholic_jwt = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.15"
env_logger = "0.9"
jsonwebtoken = "7.2"
log = "0.4"
rand = "0.8"
reqwest = "0.11"
scraper = "0.12"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
