[package]
name = "anime-api"
version = "0.1.0"
authors = ["23prime <23.prime.37@gmail.com>"]
edition = "2018"
rust-version = "1.59"

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-rt = "2.7.0"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-web-httpauth = "0.6.0"
alcoholic_jwt = "1.0.1"
awc = { version = "3.0.0", features = ["rustls"] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
jsonwebtoken = "8.1.0"
log = "0.4.17"
once_cell = "1.10.0"
r2d2 = "0.8.9"
rand = "0.8.5"
reqwest = "0.11.10"
scraper = "0.13.0"
sea-orm = { version = "0.7.1", features = [
  "sqlx-postgres",
  "runtime-actix-rustls",
  "macros",
  "debug-print",
] }
serde = "1.0.137"
serde_json = "1.0.81"
sha2 = "0.10.2"
