[package]
name = "entity"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9.2", features = [
  "sqlx-postgres",
  "runtime-actix-rustls",
  "macros",
  "debug-print",
] }
