[package]
name = "migration"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.9.2"
features = ["sqlx-postgres", "runtime-actix-rustls"]
